vlib/v/parser/tests/select_else_2.out
vlib/v/parser/tests/select_else_2.vv:9:3: notice: `>` is deprecated and will soon be forbidden - just state the timeout in nanoseconds
    7 |             println(b)
    8 |         }
    9 |         > 30 * time.millisecond {
      |         ^
   10 |             println('bad')
   11 |         }
vlib/v/parser/tests/select_else_2.vv:12:3: error: timeout `> t` and `else` are mutually exclusive `select` keys
   10 |             println('bad')
   11 |         }
   12 |         else {
      |         ~~~~
   13 |             println("shouldn't get here")
   14 |         }
